// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons/Docs with some emoji 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c48=""
    ng-reflect-text="😀 😎 👍 💯"
  >
    <button
      _ngcontent-a-c48=""
    >
      😀 😎 👍 💯
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Addons/Docs with text 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c48=""
    ng-reflect-text="hello button"
  >
    <button
      _ngcontent-a-c48=""
    >
      hello button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
